# ComfyUI-Photopea-tab

./: .gitignore  README.md  __init__.py  pyproject copy.toml  pyproject.toml
.github/workflows/: publish.yml
docs/: llm_ressources.txt
js/: photopea.js
