# pyproject.toml
[project]
name = "Photopea-Tab"
description = "A custom extension for ComfyUI that integrates Photopea directly into the sidebar."
version = "1.1.0"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/nolbert82/ComfyUI-Photopea-tab"

[tool.comfy]
PublisherId = "nolbert82"
DisplayName = "Photopea Tab"
Icon = "./icon.png"